Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-72429

Regression 64bit multiplication not compiling on Integrity

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.12.1, 5.14.0 Alpha
    • 5.12.1
    • Core: Other
    • None
    • Integrity
    • e3d1f8d0753cc0f7486378bdc41fad9bde4b6d5c (qt/qtbase/5.12.1)

      Broken by 6b875f0625acc6c6a4f8899b829176baaf7d8502 .

      
      "../../include/QtCore/5.12.0/QtCore/private/../../../../../../../qt5/qtbase/src/corelib/global/qnumeric_p.h", line 351: error #20:
                identifier "__mulh" is undefined
            qint64 high = __mulh(v1, v2);
      
      
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            thiago Thiago Macieira
            e0150566 Janne Roine
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes