Fix build in INTEGRITY: __mulh is not defined

Commit 6b875f0625acc6c6a4f8899b829176baaf7d8502 created a macro for it,
but in the multiple updates to find the best solution, we forgot to use
it.

Fixes: QTBUG-72429
Change-Id: I4ac1156702324f0fb814fffd156f27c1789d1409
Reviewed-by: Thomas Miller <thomaslmiller91@gmail.com>
Reviewed-by: Janne Koskinen <janne.p.koskinen@qt.io>
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>